# wdk-signer-local

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  binding.c  binding.h  binding_android.c  binding_darwin.c  build-android-lib.sh  generate-compiledb.sh  package-lock.json  package.json  rebuild.sh  shared.c  test.js  tsconfig.json
.github/workflows/: publish.yml  test.yml
android-lib/: README.md  build.gradle.kts  settings.gradle.kts
android-lib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-lib/src/main/java/com/tetherto/bare/signer/: BiometricHelper.kt  SecureDataHelper.kt  SecureStorage.kt
scripts/: setup-crypto-shim.js
src/: binding.js  index.js  polyfills.js
types/: index.d.ts
